--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   lottie: ^1.4.3
   provider: ^6.0.3
   sliding_up_panel: ^2.0.0
+  webview_flutter: ^3.0.0
+  http: ^0.13.5
+  bloc: ^8.1.0
 
 dev_dependencies:
   flutter_test:
