midtrans url in adapter
midtrans url in adapter

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   webview_flutter: ^3.0.0
   http: ^0.13.5
   bloc: ^8.1.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
